# nordpy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cz.toml  prek.toml  pyproject.toml  requirements.txt  ruff.toml  tox.toml  ty.toml
.github/workflows/: ci.yml  release.yml
src/nordpy/: __init__.py  __main__.py  app.py  auth.py  client.py  export.py  http.py  models.py  nordnet.py  session.py
src/nordpy/BrowserClient/: BrowserClient.py  CustomSRP.py  Helpers.py  LICENSE
src/nordpy/screens/: accounts.py  auth.py  chart.py  detail.py  holdings.py  instrument_chart.py  trades.py  transactions.py
src/nordpy/services/: __init__.py  portfolio_chart.py  price_history.py
src/nordpy/styles/: nordpy.tcss
src/nordpy/widgets/: export_dialog.py
tests/: conftest.py
tests/unit/: test_client.py  test_export.py  test_models.py  test_portfolio_chart.py  test_session.py
