[project]
name = "nordpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kilian Tscherny", email = "90620239+kiliantscherny@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.11.0",
    "qrcode>=8.2",
    "requests>=2.32.5",
]

[project.scripts]
nordpy = "nordpy:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
